# Gold-Return-Prediction

./: pyproject.toml
Classification/: Gold Prediction Experiment  Classification- PyCaret.ipynb  Gold Prediction New Data - Classification.ipynb  pandas profiling.ipynb
Regression/: Gold Prediction Experiment  Regression- PyCaret.ipynb  Gold Prediction New Data - Regression.ipynb
data/: Training Data_Values.csv
test/: setup.py  test.ipynb
