classifiers = [
  # How mature is this project? Common values are
  #   3 - Alpha
  #   4 - Beta
  #   5 - Production/Stable
  "Development Status :: 4 - Beta",

  # Indicate who your project is intended for
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Build Tools",

  # Pick your license as you wish (see also "license" above)
  "License :: OSI Approved :: MIT License",

  # Specify the Python versions you support here.
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
]

[project]
requires-python = ">= 3.8"

authors = [
  {name = "Drew", email = "andrewscience304@gmail.com"}
]

maintainers = [
  {name = "Drew", email = "andrewscience304@gmail.com"}
]

description = "Gold and Commodity Price Prediction"

readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE"}
keywords = ["gold", "bacon", "oil", "commodities"]

[tool.black]
line-length = 100
target-version = ['py38']